fix test for IntrospectionDelegating Realm